--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Installation and Usage: 
 1) You will need lasted OCaml release installed: http://caml.inria.fr/ocaml/release.en.html
 
-2) Follow these steps to check a property file:
+2) Follow these steps to "check" a program (in the example below, from the file "property.ml"):
 $ ocamlc -w a -o result BoundedCheck.ml property.ml
 $ ./result
