--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+About Haskell's QuickCheck Library: http://www.haskell.org/haskellwiki/Introduction_to_QuickCheck
+
 Installation and Usage: 
 1) You will need lasted OCaml release installed: http://caml.inria.fr/ocaml/release.en.html
 
